arreglando colores y enlances

--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -13,8 +13,8 @@
 
 <body>
     <header class="header-flex">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg ">
+            <div class="container-fluid ancho">
                 <a class="navbar-brand" href="../index.html">BRANDPADEL</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,7 +67,7 @@
                 <img src="../imagenes/cubregrip x-trust.jpg" class="card-img-top" alt="cubregrip x-trust">
                 <div class="card-body">
                     <h5 class="card-title">Cubregrip X-Trust lisos</h5>
-                     <h6>$726,00</h6>
+                    <h6>$726,00</h6>
                     <p class="card-text">Hasta 6 cuotas sin interés</p>
                     <a href="#" class="btn btn-primary">Comprar</a>
                 </div>
@@ -76,7 +76,7 @@
                 <img src="../imagenes/medias.jpg" class="card-img-top" alt="medias">
                 <div class="card-body">
                     <h5 class="card-title">Medias X-Trust</h5>
-                     <h6>$5.324,00</h6>
+                    <h6>$5.324,00</h6>
                     <p class="card-text">Hasta 6 cuotas sin interés</p>
                     <a href="#" class="btn btn-primary">Comprar</a>
                 </div>
@@ -85,7 +85,7 @@
                 <img src="../imagenes/muñequeras royal.webp" class="card-img-top" alt="muñequeras royal">
                 <div class="card-body">
                     <h5 class="card-title">Muñequeras Royal</h5>
-                     <h6>$3.146,00</h6>
+                    <h6>$3.146,00</h6>
                     <p class="card-text">Hasta 6 cuotas sin interés</p>
                     <a href="#" class="btn btn-primary">Comprar</a>
                 </div>
@@ -94,7 +94,7 @@
                 <img src="../imagenes/presurizador.webp" class="card-img-top" alt="presurizador">
                 <div class="card-body">
                     <h5 class="card-title">Presurizador de Pelotas </h5>
-                     <h6>$11.326,00</h6>
+                    <h6>$11.326,00</h6>
                     <p class="card-text">Hasta 6 cuotas sin interés</p>
                     <a href="#" class="btn btn-primary">Comprar</a>
                 </div>
@@ -103,7 +103,7 @@
                 <img src="../imagenes/protector.webp" class="card-img-top" alt="protector de paleta">
                 <div class="card-body">
                     <h5 class="card-title">Protector de Paleta</h5>
-                     <h6>$1.089,00</h6>
+                    <h6>$1.089,00</h6>
                     <p class="card-text">Hasta 6 cuotas sin interés</p>
                     <a href="#" class="btn btn-primary">Comprar</a>
                 </div>
@@ -112,7 +112,7 @@
                 <img src="../imagenes/shock out.webp" class="card-img-top" alt="antivibrador shoxk out">
                 <div class="card-body">
                     <h5 class="card-title">Antivibrador Shock Out</h5>
-                     <h6>$8.954,00</h6>
+                    <h6>$8.954,00</h6>
                     <p class="card-text">Hasta 6 cuotas sin interés</p>
                     <a href="#" class="btn btn-primary">Comprar</a>
                 </div>
@@ -121,7 +121,7 @@
                 <img src="../imagenes/pelotas bullpadel.jpeg" class="card-img-top" alt="tubo pelotas bullpadel">
                 <div class="card-body">
                     <h5 class="card-title">Tubo de Pelotas BullPadel Gold</h5>
-                     <h6>$4.235,00</h6>
+                    <h6>$4.235,00</h6>
                     <p class="card-text">Hasta 6 cuotas sin interés</p>
                     <a href="#" class="btn btn-primary">Comprar</a>
                 </div>
@@ -146,8 +146,12 @@
                 <div><a href="#">T</a></div>
             </div>
             <div class="terminos">
-                <p>Terminos y condiciones</p>
-                <p>Politica de privacidad</p>
+                <p>
+                    <a href="#">Terminos y condiciones</a>
+                </p>
+                <p>
+                    <a href="#">Politica de privacidad</a>
+                </p>
             </div>
         </section>
     </footer>
