--- a/pages/paletas.html
+++ b/pages/paletas.html
@@ -13,8 +13,8 @@
 
 <body>
     <header class="header-flex">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg ">
+            <div class="container-fluid ancho">
                 <a class="navbar-brand" href="../index.html">BRANDPADEL</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -185,8 +185,12 @@
                 <div><a href="#">T</a></div>
             </div>
             <div class="terminos">
-                <p>Terminos y condiciones</p>
-                <p>Politica de privacidad</p>
+                <p>
+                    <a href="#">Terminos y condiciones</a>  
+                  </p>
+                  <p>
+                    <a href="#">Politica de privacidad</a>  
+                  </p>
             </div>
         </section>
     </footer>
