sacando scroll lateral

--- a/pages/paletas.html
+++ b/pages/paletas.html
@@ -109,7 +109,8 @@
                 </div>
             </div>
             <div class="card loc producto8" style="width: 18rem;">
-                <img src="../imagenes/PALETA ADIDAS METALBONE W TEAM.png" class="card-img-top" alt="paleta adidas metalbone">
+                <img src="../imagenes/PALETA ADIDAS METALBONE W TEAM.png" class="card-img-top"
+                    alt="paleta adidas metalbone">
                 <div class="card-body">
                     <h5 class="card-title">Paleta Adidas Metalbone W Team</h5>
                     <h6>$199.000</h6>
@@ -118,7 +119,8 @@
                 </div>
             </div>
             <div class="card loc producto9" style="width: 18rem;">
-                <img src="../imagenes/paleta-de-padel-varlion-bourne-88-201.jpg" class="card-img-top" alt="paleta varlion bourne">
+                <img src="../imagenes/paleta-de-padel-varlion-bourne-88-201.jpg" class="card-img-top"
+                    alt="paleta varlion bourne">
                 <div class="card-body">
                     <h5 class="card-title">Paleta Varlion Bourne 8.8</h5>
                     <h6>$73.999</h6>
@@ -154,7 +156,7 @@
                 </div>
             </div>
             <div class="card loc producto13" style="width: 18rem;">
-                <img src="../imagenes/kelme jaguar.jpg " class= " card-img-top" alt="paleta kelme">
+                <img src="../imagenes/kelme jaguar.jpg " class=" card-img-top" alt="paleta kelme">
                 <div class="card-body">
                     <h5 class="card-title">Paleta Kelme Jaguar</h5>
                     <h6>$60.000</h6>
@@ -163,7 +165,7 @@
                 </div>
             </div>
             <div class="card loc producto14" style="width: 18rem;">
-                <img src="../imagenes/adidas adipower light 2.0.jpg" class= " card-img-top" alt="paleta adidas">
+                <img src="../imagenes/adidas adipower light 2.0.jpg" class=" card-img-top" alt="paleta adidas">
                 <div class="card-body">
                     <h5 class="card-title"> Adidas Adipower Light 2.0</h5>
                     <h6>$95.000</h6>
@@ -171,7 +173,7 @@
                     <a href="#" class="btn btn-primary">Comprar</a>
                 </div>
             </div>
-            
+
 
 
         </section>
@@ -186,11 +188,11 @@
             </div>
             <div class="terminos">
                 <p>
-                    <a href="#">Terminos y condiciones</a>  
-                  </p>
-                  <p>
-                    <a href="#">Politica de privacidad</a>  
-                  </p>
+                    <a href="#">Terminos y condiciones</a>
+                </p>
+                <p>
+                    <a href="#">Politica de privacidad</a>
+                </p>
             </div>
         </section>
     </footer>
