--- a/index.html
+++ b/index.html
@@ -91,16 +91,30 @@
                 <li>Recibi el producto que esperás.</li>
             </ol>
         </section>
+        <section class="info">
+            <div >
+                <p>ENVIAMOS TU COMPRA</p>
+                <h6>Entregas a todo el país</h6>
+            </div>
+            <div >
+                <p>PAGÁ COMO QUIERAS</p>
+                <h6>Tarjetas de crédito o efectivo</h6>
+            </div>
+            <div >
+                <p>COMPRA CON SEGURIDAD</p>
+                <h6>Tus datos siempre protegidos</h6>
+            </div>
+        </section>
 
     </main>
     <footer class="footer">
         <section>
-            <div class="redes">
+            <div class="footer__redes">
                 <div><a href="#">F</a></div>
                 <div><a href="#">I</a></div>
                 <div><a href="#">T</a></div>
             </div>
-            <div class="terminos">
+            <div class="footer__terminos">
                 <p>
                     <a href="#">Terminos y condiciones</a>
                 </p>
