--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -42,30 +42,45 @@
             </div>
         </nav>
     </header>
-    <main class="contacto">
-
-        <h1 class="negrita">Contactanos</h1>
-        <p class="negrita"> Telefono: 2223434850</p>
-        <p class="negrita"> Mail: BrandPadel@gmail.com</p>
-        <p class="negrita"> Ubicacion: Las Heras e/ 16 y 17. Brandsen - Buenos Aires</p>
-        <input class="input2" type="text" placeholder="nombre" name="nombre">
-        <br><br>
-        <input class="input2" type="text" placeholder="email" name="email">
-        <br><br>
-        <input class="input2" type="text" placeholder="telefono" name="telefono">
-        <br><br>
-        <input class="input2" type="text" placeholder="mensaje" name="mensaje">
-        <br><br>
-        <input class="enviar-contacto" type="submit">
+    <main class="main-contacto">
+        <section class="contacto">
+            <h1 class="negrita">Contactanos</h1>
+            <p class="negrita"> Telefono: 2223434850</p>
+            <p class="negrita"> Mail: BrandPadel@gmail.com</p>
+            <p class="negrita"> Ubicacion: Las Heras e/ 16 y 17. Brandsen - Buenos Aires</p>
+            <input class="input2" type="text" placeholder="nombre" name="nombre">
+            <br><br>
+            <input class="input2" type="text" placeholder="email" name="email">
+            <br><br>
+            <input class="input2" type="text" placeholder="telefono" name="telefono">
+            <br><br>
+            <input class="input2" type="text" placeholder="mensaje" name="mensaje">
+            <br><br>
+            <input class="enviar-contacto" type="submit">
+        </section>
+        <section class="info">
+            <div>
+                <p>ENVIAMOS TU COMPRA</p>
+                <h6>Entregas a todo el país</h6>
+            </div>
+            <div>
+                <p>PAGÁ COMO QUIERAS</p>
+                <h6>Tarjetas de crédito o efectivo</h6>
+            </div>
+            <div>
+                <p>COMPRA CON SEGURIDAD</p>
+                <h6>Tus datos siempre protegidos</h6>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <section>
-            <div class="redes">
+            <div class="footer__redes">
                 <div><a href="#">F</a></div>
                 <div><a href="#">I</a></div>
                 <div><a href="#">T</a></div>
             </div>
-            <div class="terminos">
+            <div class="footer__terminos">
                 <p>
                     <a href="#">Terminos y condiciones</a>
                 </p>
