--- a/pages/paletas.html
+++ b/pages/paletas.html
@@ -43,9 +43,9 @@
         </nav>
     </header>
     <main class="paletas">
-        <h1 class="h1">Jugá con lo mejor</h1>
-        <section class="grid-container">
-            <div class="card  loc producto1" style="width: 18rem;">
+        <h1 class="paletas__titulo">Jugá con lo mejor</h1>
+        <section class="paletas__productos">
+            <div class="card  loc paletas__producto-1" style="width: 18rem;">
                 <img src="../imagenes/adidas.jpg" class="card-img-top" alt="paleta adidas">
                 <div class="card-body">
                     <h5 class="card-title">Paleta Adipower 3.0</h5>
@@ -54,7 +54,7 @@
                     <a href="#" class="btn btn-primary">Comprar</a>
                 </div>
             </div>
-            <div class="card  loc producto2" style="width: 18rem;">
+            <div class="card  loc paletas__producto-2" style="width: 18rem;">
                 <img src="../imagenes/babolat air.webp" class="card-img-top" alt="paleta babolat">
                 <div class="card-body">
                     <h5 class="card-title">Paleta Air Viper 2022</h5>
@@ -63,7 +63,7 @@
                     <a href="#" class="btn btn-primary">Comprar</a>
                 </div>
             </div>
-            <div class="card  loc producto3" style="width: 18rem;">
+            <div class="card  loc paletas__producto-3" style="width: 18rem;">
                 <img src="../imagenes/royal toro.jpg" class="card-img-top" alt="paleta royal">
                 <div class="card-body">
                     <h5 class="card-title">Paleta Royal Toro Black</h5>
@@ -72,7 +72,7 @@
                     <a href="#" class="btn btn-primary">Comprar</a>
                 </div>
             </div>
-            <div class="card  loc producto4" style="width: 18rem;">
+            <div class="card  loc paletas__producto-4" style="width: 18rem;">
                 <img src="../imagenes/paleta growpadel.jpg" class="card-img-top" alt="paleta growpadel">
                 <div class="card-body">
                     <h5 class="card-title">Paleta GrowPadel Power Hit</h5>
@@ -81,7 +81,7 @@
                     <a href="#" class="btn btn-primary">Comprar</a>
                 </div>
             </div>
-            <div class="card  loc producto5" style="width: 18rem;">
+            <div class="card  loc paletas__producto-5" style="width: 18rem;">
                 <img src="../imagenes/paleta vairo grapheno.jpg" class="card-img-top" alt="paleta vairo">
                 <div class="card-body">
                     <h5 class="card-title">Paleta Vairo grapheno speed 9.1</h5>
@@ -90,7 +90,7 @@
                     <a href="#" class="btn btn-primary">Comprar</a>
                 </div>
             </div>
-            <div class="card  loc producto6" style="width: 18rem;">
+            <div class="card  loc paletas__producto-6" style="width: 18rem;">
                 <img src="../imagenes/bullpadel vertex.jpg" class="card-img-top" alt="paleta wilson">
                 <div class="card-body">
                     <h5 class="card-title">Paleta Bullpadel Vertex 03 JR 2022</h5>
@@ -99,7 +99,7 @@
                     <a href="#" class="btn btn-primary">Comprar</a>
                 </div>
             </div>
-            <div class="card loc producto7" style="width: 18rem;">
+            <div class="card loc paletas__producto-7" style="width: 18rem;">
                 <img src="../imagenes/nox at10.jpg" class="card-img-top" alt="paleta Nox">
                 <div class="card-body">
                     <h5 class="card-title">Nox AT10 Genius 18K by Agustín Tapia</h5>
@@ -108,7 +108,7 @@
                     <a href="#" class="btn btn-primary">Comprar</a>
                 </div>
             </div>
-            <div class="card loc producto8" style="width: 18rem;">
+            <div class="card loc paletas__producto-8" style="width: 18rem;">
                 <img src="../imagenes/PALETA ADIDAS METALBONE W TEAM.png" class="card-img-top"
                     alt="paleta adidas metalbone">
                 <div class="card-body">
@@ -118,7 +118,7 @@
                     <a href="#" class="btn btn-primary">Comprar</a>
                 </div>
             </div>
-            <div class="card loc producto9" style="width: 18rem;">
+            <div class="card loc paletas__producto-9" style="width: 18rem;">
                 <img src="../imagenes/paleta-de-padel-varlion-bourne-88-201.jpg" class="card-img-top"
                     alt="paleta varlion bourne">
                 <div class="card-body">
@@ -128,7 +128,7 @@
                     <a href="#" class="btn btn-primary">Comprar</a>
                 </div>
             </div>
-            <div class="card loc producto10" style="width: 18rem;">
+            <div class="card loc  paletas__producto-10" style="width: 18rem;">
                 <img src="../imagenes/paleta-bullpadel-hack-03-.jpg" class="card-img-top" alt="paleta bullpadel hack">
                 <div class="card-body">
                     <h5 class="card-title">Paleta BullPadel Hack 03</h5>
@@ -137,7 +137,7 @@
                     <a href="#" class="btn btn-primary">Comprar</a>
                 </div>
             </div>
-            <div class="card loc producto11" style="width: 18rem;">
+            <div class="card loc  paletas__producto-11" style="width: 18rem;">
                 <img src="../imagenes/PALETA STEELCUSTOM IMPERIA.webp" class="card-img-top" alt="paleta steelcustom">
                 <div class="card-body">
                     <h5 class="card-title">Paleta Steelcustom Imperia</h5>
@@ -146,7 +146,7 @@
                     <a href="#" class="btn btn-primary">Comprar</a>
                 </div>
             </div>
-            <div class="card loc producto12" style="width: 18rem;">
+            <div class="card loc  paletas__producto-12" style="width: 18rem;">
                 <img src="../imagenes/head alpha elite.jpg" class="card-img-top" alt="paleta head">
                 <div class="card-body">
                     <h5 class="card-title">Paleta Head Alpha Elite</h5>
@@ -155,7 +155,7 @@
                     <a href="#" class="btn btn-primary">Comprar</a>
                 </div>
             </div>
-            <div class="card loc producto13" style="width: 18rem;">
+            <div class="card loc  paletas__producto-13" style="width: 18rem;">
                 <img src="../imagenes/kelme jaguar.jpg " class=" card-img-top" alt="paleta kelme">
                 <div class="card-body">
                     <h5 class="card-title">Paleta Kelme Jaguar</h5>
@@ -164,7 +164,7 @@
                     <a href="#" class="btn btn-primary">Comprar</a>
                 </div>
             </div>
-            <div class="card loc producto14" style="width: 18rem;">
+            <div class="card loc  paletas__producto-14" style="width: 18rem;">
                 <img src="../imagenes/adidas adipower light 2.0.jpg" class=" card-img-top" alt="paleta adidas">
                 <div class="card-body">
                     <h5 class="card-title"> Adidas Adipower Light 2.0</h5>
@@ -173,20 +173,31 @@
                     <a href="#" class="btn btn-primary">Comprar</a>
                 </div>
             </div>
-
-
-
+         </section>
+         <section class="info">
+            <div>
+                <p>ENVIAMOS TU COMPRA</p>
+                <h6>Entregas a todo el país</h6>
+            </div>
+            <div>
+                <p>PAGÁ COMO QUIERAS</p>
+                <h6>Tarjetas de crédito o efectivo</h6>
+            </div>
+            <div>
+                <p>COMPRA CON SEGURIDAD</p>
+                <h6>Tus datos siempre protegidos</h6>
+            </div>
         </section>
     </main>
 
     <footer class="footer">
         <section>
-            <div class="redes">
+            <div class="footer__redes">
                 <div><a href="#">F</a></div>
                 <div><a href="#">I</a></div>
                 <div><a href="#">T</a></div>
             </div>
-            <div class="terminos">
+            <div class="footer__terminos">
                 <p>
                     <a href="#">Terminos y condiciones</a>
                 </p>
