--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+        <script src="https://kit.fontawesome.com/f8eb04cceb.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../CSS/style.css">
     <title>Contacto</title>
 </head>
@@ -60,14 +61,17 @@
         </section>
         <section class="info">
             <div>
+                <a href="#"><i class="fa-solid fa-truck"></i></a>
                 <p>ENVIAMOS TU COMPRA</p>
                 <h6>Entregas a todo el país</h6>
             </div>
             <div>
+                <a href="#"><i class="fa-regular fa-credit-card"></i></a>
                 <p>PAGÁ COMO QUIERAS</p>
                 <h6>Tarjetas de crédito o efectivo</h6>
             </div>
             <div>
+                <a href="#"><i class="fa-solid fa-lock"></i></a>
                 <p>COMPRA CON SEGURIDAD</p>
                 <h6>Tus datos siempre protegidos</h6>
             </div>
@@ -76,9 +80,9 @@
     <footer class="footer">
         <section>
             <div class="footer__redes">
-                <div><a href="#">F</a></div>
-                <div><a href="#">I</a></div>
-                <div><a href="#">T</a></div>
+                <div><a href="#"><i class="fa-brands fa-facebook"></i></a></div>
+                <div><a href="#"><i class="fa-brands fa-instagram"></i></a></div>
+                <div><a href="#"><i class="fa-brands fa-twitter"></i></a></div>
             </div>
             <div class="footer__terminos">
                 <p>
