--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,7 +11,8 @@
         type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/f8eb04cceb.js" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/4f56426dbe.js" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="../CSS/style.css">
     <title>Contacto | BP</title>
 </head>
@@ -31,13 +32,13 @@
                             <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./accesorios.html">Accesorios</a>
+                            <a class="nav-link" href="./plan-canje.html">Plan Canje</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./paletas.html">Paletas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./bolsos.html">Bolsos</a>
+                            <a class="nav-link" href="./quienes-somos.html">Quienes Somos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./contacto.html">Contacto</a>
