--- a/pages/paletas.html
+++ b/pages/paletas.html
@@ -48,7 +48,7 @@
         </nav>
     </header>
     <main class="paletas">
-        <h1 class="paletas__titulo">Las mejores paletas</h1>
+        <h1 class="paletas__titulo">Encuentra la paleta perfecta para ti</h1>
         <section class="paletas__productos">
             <div class="card  loc paletas__producto-1">
                 <img src="../imagenes/adidas.jpg" class="card-img-top" alt="paleta adidas">
