--- a/pages/plan-canje.html
+++ b/pages/plan-canje.html
@@ -49,7 +49,7 @@
     </header>
     <main class="canje">
         <section class="canje__seccion">
-            <h1>Traé tu paleta vieja y llevate una nueva</h1>
+            <h1>Canjea tu paleta y dale un boost a tu juego</h1>
             <div class="canje__portada">
                 <img class="canje__img" src="/imagenes/plan.jpg" alt="foto de cancha de padel">
                 <div class="canje__tit">
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="canje__list">
-                <h4>¿Cómo puedo renovar mi paleta?</h4>
+                <h4>¿Cómo puedo canjear mi paleta?</h4>
                 <p>Tu paleta no debe tener ningun golpe o rotura que impida jugar con normalidad.</p>
                 <div><a href="#"><i class="fa-regular fa-circle-check"></i></a></div>
                 <p>Verifica que tu paleta se encuentre en condiciones de ser entregada.</p>
