--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <!-- CONTENIDO PRINCIPAL -->
     <main class="index">
         <img src="./imagenes/portada proyecto.jpg" alt="Paletas">
-        <h1 class="h1">La pasión por el padel</h1>
+        <h1 >La pasión por el padel</h1>
         <section class="secciones-index">
             <div class="card loc">
                 <img src="./imagenes/adidas.jpg" class="card-img-top" alt="paleta adidas">
