--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,7 +11,7 @@
         type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-        <script src="https://kit.fontawesome.com/4f56426dbe.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/4f56426dbe.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="../CSS/style.css">
     <title>Contacto | BP</title>
@@ -49,21 +49,33 @@
         </nav>
     </header>
     <main class="main-contacto">
+
         <section class="contacto">
-            <h1 class="negrita">Contactanos</h1>
-            <p class="negrita"> Telefono: 2223434850</p>
-            <p class="negrita"> Mail: BrandPadel@gmail.com</p>
-            <p class="negrita"> Ubicacion: Las Heras e/ 16 y 17. Brandsen - Buenos Aires</p>
-            <input class="input2" type="text" placeholder="nombre" name="nombre">
-            <br><br>
-            <input class="input2" type="text" placeholder="email" name="email">
-            <br><br>
-            <input class="input2" type="text" placeholder="telefono" name="telefono">
-            <br><br>
-            <input class="input2" type="text" placeholder="mensaje" name="mensaje">
-            <br><br>
-            <input class="enviar-contacto" type="submit">
+            <section>
+                <h1 class="negrita">Contactanos</h1>
+                <p class="negrita"> Telefono: 2223434850</p>
+                <p class="negrita"> Mail: BrandPadel@gmail.com</p>
+                <p class="negrita"> Ubicacion: Las Heras e/ 16 y 17. Brandsen - Buenos Aires</p>
+                <input class="input2" type="text" placeholder="nombre" name="nombre">
+                <br><br>
+                <input class="input2" type="text" placeholder="email" name="email">
+                <br><br>
+                <input class="input2" type="text" placeholder="telefono" name="telefono">
+                <br><br>
+                <input class="input2" type="text" placeholder="mensaje" name="mensaje">
+                <br><br>
+                <input class="enviar-contacto" type="submit">
+            </section>
+            <section class="contacto__mapa">
+                <div>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3261.0665349656374!2d-58.23246192370565!3d-35.17989418815642!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a2b7d3a01c5789%3A0x810e76725f263926!2sLas%20Heras%2C%20Coronel%20Brandsen%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1683763927572!5m2!1ses!2sar"
+                        width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </section>
         </section>
+
         <section class="info">
             <div>
                 <a href="#"><i class="fa-solid fa-truck"></i></a>
