--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -11,7 +11,7 @@
         type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-        <script src="https://kit.fontawesome.com/4f56426dbe.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/4f56426dbe.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../CSS/style.css">
     <title>Bolsos | BP</title>
 </head>
@@ -47,9 +47,30 @@
             </div>
         </nav>
     </header>
-    <main class="bolsos">
-        <h1>Conocenos</h1>
-       
+    <main class="quienes-somos">
+        <section class="quienes__section">
+            <h1 class="negrita">Conocenos</h1>
+            <section class="quienes__info">
+                <img class="img1" src="/imagenes/quienes-somos1.jpg" alt="foto de padel">
+                <p class="p1">En nuestra tienda online de paletas de pádel nos apasiona el deporte tanto como a ti. <span class="negrita"> Somos un
+                    equipo
+                    de profesionales que vive con emoción cada partido</span> y consideramos que el equipamiento es
+                    fundamental
+                    para el rendimiento y la experiencia del jugador.</p>
+                <img class="img2" src="/imagenes/quienes-somos2.jpg" alt="foto de padel">
+                <p class="p2">Trabajamos constantemente en la búsqueda de <span class="negrita"> las mejores marcas y modelos de paletas </span>de pádel para
+                    ofrecerte una selección exclusiva de productos de calidad. Además, nos enfocamos en brindar un
+                    servicio al cliente de excelencia, y en garantizar la satisfacción de nuestros clientes en cada
+                    compra.</p>
+                <img class="img3" src="/imagenes/quienes-somos3.jpg" alt="foto de padel">
+                <p class="p3">Nuestra misión es que puedas encontrar en nuestra tienda online la paleta de pádel que mejor se
+                    adapte a tu estilo de juego, necesidades y presupuesto. Queremos acompañarte en tu pasión por el
+                    pádel, brindándote una experiencia de compra fácil, segura y confiable.</p>
+                <p class="p4 negrita">¡Gracias por visitarnos y confiar en nosotros!</p>
+
+            </section>
+        </section>
+
         <section class="info">
             <div>
                 <a href="#"><i class="fa-solid fa-truck"></i></a>
