--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -56,15 +56,13 @@
                 <p class="negrita"> Telefono: 2223434850</p>
                 <p class="negrita"> Mail: BrandPadel@gmail.com</p>
                 <p class="negrita"> Ubicacion: Las Heras e/ 16 y 17. Brandsen - Buenos Aires</p>
-                <input class="input2" type="text" placeholder="nombre" name="nombre">
-                <br><br>
-                <input class="input2" type="text" placeholder="email" name="email">
-                <br><br>
-                <input class="input2" type="text" placeholder="telefono" name="telefono">
-                <br><br>
-                <input class="input2" type="text" placeholder="mensaje" name="mensaje">
-                <br><br>
-                <input class="enviar-contacto" type="submit">
+                <div class="contacto__formu">
+                    <input class="input2" type="text" placeholder="nombre" name="nombre">
+                    <input class="input2" type="text" placeholder="email" name="email">
+                    <input class="input2" type="text" placeholder="telefono" name="telefono">
+                    <input class="input2" type="text" placeholder="mensaje" name="mensaje">
+                    <input class="enviar-contacto" type="submit">
+                </div>
             </section>
             <section class="contacto__mapa">
                 <div>
