--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -13,7 +13,7 @@
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/4f56426dbe.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Contacto | BP</title>
 </head>
 
